# number-system-conversion

./: LICENSE  Makefile  README.md  api.Dockerfile  docker-compose.yml  front.Dockerfile
api/: pyproject.toml
api/core/: __init__.py
api/core/infra/: cors.py  options.py  routes.py  server.py
api/core/usecase/: base_converter.py
front/: index.html
front/assets/css/: main.css
front/assets/js/: main.js
sign-in/: index.html
