[tool.poetry]
name = "api"
version = "0.1.0"
description = "System for converting numbers from certain bases to others."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sanic = "^23.3.0"
pytest = "^7.3.1"
black = "^23.3.0"
sanic-ext = "^23.3.0"
sanic-cors = "^2.2.0"
flake8 = "^6.0.0"
unimport = "^0.16.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
